  2) uncheck the 'normal 3D stereo' to not have each 3D user have to do this on his/her own (please do this only for lighting or flashers!)
  3) to go for maximum performance disable visibility or the alpha flag for turned off lights/flashers via the script
- add layering of table elements
- add per-table sound & music volume settings (0..100% scaling of the global VP settings)
- add easy selection mode if you right-click on an element in the context menu you can select those elements which are stacked under the mouse cursor
- add drawing order (via 2 modes: Hit and Select), you can move elements up/down in a list to change the drawing order
  Hit:    If you click on an element all elements which are over/under that clicked element are shown in the list box
  Select: If you select a bunch of elements, then the selected elements are shown in the list box
- add reflection option for balls per table. If you enable this option the ball is mirrored on the table. With reflection strength you can define how much the ball will reflect. 
  If the value is too high the mirror effect will look odd.
- add shadow orientation. In the table options under Lightsources you can change the shadow orientation by adding a factor to X and Y. Doing that you can change the projection of the shadow on the table.
  This is needed if you use the extra light sources to create a more real lighting/shadowing.
- add panning feature. In the editor hold ALT and move the mouse and the view will change in the direction the mouse was moved. 
  It just reacts on mouse movements if you don't move the mouse nothing will happen.
- add static rendering feature to primitives: if you set the 'Static Rendering' option, the primitive will be pre-rendered and you can't change any parameters from within the script. This is
  helpful if you want to use 3D meshes for posts or toys which won't be animated at all.